[gd_scene load_steps=3 format=3 uid="uid://0jcv3iohxtok"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_5lo3q"]
[ext_resource type="Theme" uid="uid://d3q60infp614k" path="res://assets/font_theme.tres" id="1_l1rhu"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lo3q")

[node name="DashChargeText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -103.0
offset_right = -35.0
offset_bottom = -63.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_l1rhu")
theme_override_colors/default_color = Color(1, 1, 1, 1)
text = "Dash Charges"

[node name="LevelText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -50.0
offset_right = 149.0
offset_bottom = -10.0
grow_vertical = 0
theme = ExtResource("1_l1rhu")
theme_override_colors/default_color = Color(1, 1, 1, 1)
text = "LEVEL 1"

[node name="TimerText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -237.0
offset_top = 45.0
offset_right = -48.0
offset_bottom = 85.0
grow_horizontal = 0
theme = ExtResource("1_l1rhu")
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "0\"000"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -57.0
offset_right = -161.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -57.0
offset_right = -86.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
